Updated base url

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Onoffswitch
 email: akropp@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Onoffswitch port from wordpress (no images available)
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: /onoffswitch # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: devshorts
 github_username:  devshorts
