--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Onoffswitch port from wordpress (no images available)
 baseurl: /onoffswitch # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: devshorts
 github_username:  devshorts
+
+show_excerpts: true
 
 # Build settings
 theme: minima
@@ -40,9 +41,9 @@ plugins:
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
+exclude:
+ - .idea/
+ - .jekyll-cache/
 #   - gemfiles/
 #   - Gemfile
 #   - Gemfile.lock
